--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,6 @@ spring.jpa.show-sql=${SHOW_SQL}
 server.port=${APP_PORT}
 
 #password database = 123456
+# untuk eksekusi jar dengan environment variable di command line
 # -DHOST=127.0.0.1 -DDB_PWD=227bb4efe63ab1f0885d30cd4fb9a7b4 -DDB_UNAME=sa -DDDL_AUTO=update
 # -DSHOW_SQL=true -DPORT=1433 -DDB_NAME=ujian -DSCHEMA=dbo
